--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "expo": "^40.0.1",
+    "expo-location": "~10.0.0",
+    "expo-permissions": "~10.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
@@ -21,6 +24,8 @@
     "react-native-maps": "^0.27.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
