--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "expo": "^40.0.1",
     "expo-location": "~10.0.0",
     "expo-permissions": "~10.0.0",
