--- a/app.json
+++ b/app.json
@@ -1,28 +1,33 @@
 {
-  "name": "Eurovelo",
-  "displayName": "Eurovelo",
   "expo": {
-    "name": "Eurovelo",
-    "slug": "Eurovelo",
+    "name": "EuroVelo",
+    "slug": "EuroVelo",
     "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
     "assetBundlePatterns": [
       "**/*"
     ],
-    "packagerOpts": {
-      "config": "metro.config.js",
-      "sourceExts": [
-        "expo.ts",
-        "expo.tsx",
-        "expo.js",
-        "expo.jsx",
-        "ts",
-        "tsx",
-        "js",
-        "jsx",
-        "json",
-        "wasm",
-        "svg"
-      ]
+    "ios": {
+      "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
+      },
+      "package": "com.clingier.EuroVelo"
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
     }
   }
 }
