--- a/package.json
+++ b/package.json
@@ -1,46 +1,35 @@
 {
-  "main": "index.js",
+  "main": "./index.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
-    "start": "react-native start",
-    "test": "jest"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/geolocation": "^2.0.2",
-    "@react-navigation/bottom-tabs": "^5.11.8",
-    "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "^5.14.3",
-    "expo": "^40.0.1",
-    "expo-location": "~10.0.0",
-    "expo-permissions": "~10.0.0",
-    "expo-splash-screen": "~0.8.0",
+    "@expo/metro-config": "^0.1.61",
+    "@react-navigation/bottom-tabs": "^5.11.9",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
+    "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-asset": "~8.2.1",
+    "expo-file-system": "~9.3.0",
+    "expo-sqlite": "~8.5.0",
     "expo-status-bar": "~1.0.3",
-    "expo-updates": "~0.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
-    "react-native-maps": "^0.27.1",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.15.0",
-    "react-native-svg": "^12.1.0",
+    "react-native-maps": "0.27.1",
+    "react-native-screens": "~2.15.2",
+    "react-native-svg": "12.1.0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.4",
-    "react-navigation-tabs": "^2.11.0",
-    "yarn": "^1.22.10"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "babel-jest": "~25.2.6",
-    "jest": "~25.2.6",
-    "react-test-renderer": "~16.13.1"
-  },
-  "jest": {
-    "preset": "react-native"
+    "@babel/core": "^7.9.0"
   },
   "private": true
 }
