--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-app-loading": "^1.0.1",
     "expo-asset": "~8.2.1",
     "expo-file-system": "~9.3.0",
+    "expo-linear-gradient": "~8.4.0",
     "expo-sqlite": "~8.5.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
