--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-maps": "0.27.1",
     "react-native-screens": "~2.15.2",
     "react-native-svg": "12.1.0",
